--- a/arcadia-ocp/frontend/nginx-sc.yaml
+++ b/arcadia-ocp/frontend/nginx-sc.yaml
@@ -63,8 +63,8 @@ data:
     }
 
     location /money-transfer/ {
-        proxy_pass http://money-transfer.arcadia.svc.cluster.local/money-transfer/;
-        #proxy_pass http://money-transfer.ves-system.svc.cluster.local/money-transfer/;
+        #proxy_pass http://money-transfer.arcadia.svc.cluster.local/money-transfer/;
+        proxy_pass http://money-transfer.ves-system.svc.cluster.local/money-transfer/;
         #proxy_pass http://10.42.1.63:9090/money-transfer/;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
